specbison.output
Terminals unused in grammar

   otro


Grammar

    0 $accept: PROGRAMA $end

    1 $@1: %empty

    2 $@2: %empty

    3 $@3: %empty

    4 $@4: %empty

    5 $@5: %empty

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES $@3 DECLS $@4 FUN_DECLS $@5 FUN_PRINCIPAL

    7 $@6: %empty

    8 $@7: %empty

    9 $@8: %empty

   10 $@9: %empty

   11 $@10: %empty

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto $@8 id $@9 mayor $@10 PROTOTIPOS
   13           | %empty

   14 CTES: %empty

   15 $@11: %empty

   16 CTES: CTES define id $@11 numero

   17 $@12: %empty

   18 $@13: %empty

   19 DECLS: $@12 DECL punto_coma $@13 DECLS
   20      | %empty

   21 $@14: %empty

   22 DECL: entero $@14 LISTA_ID

   23 $@15: %empty

   24 DECL: flotante $@15 LISTA_ID

   25 $@16: %empty

   26 DECL: caracter $@16 LISTA_ID

   27 $@17: %empty

   28 LISTA_ID: id $@17 L

   29 $@18: %empty

   30 L: coma id $@18 L
   31  | %empty

   32 $@19: %empty

   33 FUN_DECLS: $@19 FUN_DECL FUN_DECLS
   34          | %empty

   35 $@20: %empty

   36 FUN_PRINCIPAL: funcionprincipal paren_open paren_close $@20 CUERPOFUN

   37 FUN_DECL: ENCA CUERPOFUN

   38 $@21: %empty

   39 $@22: %empty

   40 $@23: %empty

   41 ENCA: funcion TIPO id $@21 paren_open $@22 $@23 F

   42 TIPO: entero
   43     | flotante
   44     | caracter

   45 $@24: %empty

   46 F: $@24 ARGS paren_close
   47  | paren_close

   48 ARGS: TIPO id

   49 $@25: %empty

   50 $@26: %empty

   51 ARGS: TIPO id $@25 coma $@26 ARGS

   52 $@27: %empty

   53 CUERPOFUN: llave_open $@27 DECLS LISTA_INS llave_close

   54 $@28: %empty

   55 CUERPO: llave_open $@28 LISTA_INS llave_close

   56 LISTA_INS: INS
   57          | INS LISTA_INS

   58 $@29: %empty

   59 $@30: %empty

   60 $@31: %empty

   61 INS: id $@29 igual $@30 EXP $@31 punto_coma
   62    | directiva paraleliza punto_coma

   63 $@32: %empty

   64 $@33: %empty

   65 INS: si $@32 COND entonces $@33 INSTS

   66 $@34: %empty

   67 INS: mientras $@34 COND haz INSTS

   68 $@35: %empty

   69 INS: regresa paren_open $@35 EXP paren_close punto_coma

   70 INSTS: INS
   71      | CUERPO

   72 COND: EXP RELOP EXP

   73 EXP: TERMINO
   74    | EXP ADOP TERMINO

   75 TERMINO: FACTOR
   76        | TERMINO MULOP FACTOR

   77 FACTOR: id
   78       | id paren_open paren_close

   79 $@36: %empty

   80 FACTOR: id paren_open $@36 LISTA_EXP paren_close
   81       | numero

   82 $@37: %empty

   83 FACTOR: paren_open $@37 EXP paren_close

   84 LISTA_EXP: EXP

   85 $@38: %empty

   86 LISTA_EXP: EXP coma $@38 LISTA_EXP

   87 RELOP: mayor_igual
   88      | menor_igual
   89      | mayor
   90      | menor
   91      | igual
   92      | no_igual

   93 ADOP: mas
   94     | menos

   95 MULOP: por
   96      | entre


Terminals, with rules where they appear

$end (0) 0
id (1) 12 16 28 30 41 48 51 61 77 78 80
numero (2) 16 81
entero (3) 22 42
flotante (4) 24 43
caracter (5) 26 44
si (6) 65
entonces (7) 65
otro (8)
mientras (9) 67
haz (10) 67
regresa (11) 69
directiva (12) 62
paraleliza (13) 62
incluye (14) 12
define (15) 16
funcion (16) 41
funcionprincipal (17) 36
punto (18) 12
punto_coma (19) 19 61 62 69
coma (20) 30 51 86
paren_open (22) 36 41 69 78 80 83
paren_close (23) 36 46 47 69 78 80 83
llave_open (24) 53 55
llave_close (25) 53 55
mayor_igual (26) 87
menor_igual (27) 88
mayor (28) 12 89
menor (29) 12 90
igual (30) 61 91
no_igual (31) 92
mas (32) 93
menos (33) 94
por (34) 95
entre (35) 96
error (256)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
PROGRAMA (38)
    on left: 6, on right: 0
$@1 (39)
    on left: 1, on right: 6
$@2 (40)
    on left: 2, on right: 6
$@3 (41)
    on left: 3, on right: 6
$@4 (42)
    on left: 4, on right: 6
$@5 (43)
    on left: 5, on right: 6
PROTOTIPOS (44)
    on left: 12 13, on right: 6 12
$@6 (45)
    on left: 7, on right: 12
$@7 (46)
    on left: 8, on right: 12
$@8 (47)
    on left: 9, on right: 12
$@9 (48)
    on left: 10, on right: 12
$@10 (49)
    on left: 11, on right: 12
CTES (50)
    on left: 14 16, on right: 6 16
$@11 (51)
    on left: 15, on right: 16
DECLS (52)
    on left: 19 20, on right: 6 19 53
$@12 (53)
    on left: 17, on right: 19
$@13 (54)
    on left: 18, on right: 19
DECL (55)
    on left: 22 24 26, on right: 19
$@14 (56)
    on left: 21, on right: 22
$@15 (57)
    on left: 23, on right: 24
$@16 (58)
    on left: 25, on right: 26
LISTA_ID (59)
    on left: 28, on right: 22 24 26
$@17 (60)
    on left: 27, on right: 28
L (61)
    on left: 30 31, on right: 28 30
$@18 (62)
    on left: 29, on right: 30
FUN_DECLS (63)
    on left: 33 34, on right: 6 33
$@19 (64)
    on left: 32, on right: 33
FUN_PRINCIPAL (65)
    on left: 36, on right: 6
$@20 (66)
    on left: 35, on right: 36
FUN_DECL (67)
    on left: 37, on right: 33
ENCA (68)
    on left: 41, on right: 37
$@21 (69)
    on left: 38, on right: 41
$@22 (70)
    on left: 39, on right: 41
$@23 (71)
    on left: 40, on right: 41
TIPO (72)
    on left: 42 43 44, on right: 41 48 51
F (73)
    on left: 46 47, on right: 41
$@24 (74)
    on left: 45, on right: 46
ARGS (75)
    on left: 48 51, on right: 46 51
$@25 (76)
    on left: 49, on right: 51
$@26 (77)
    on left: 50, on right: 51
CUERPOFUN (78)
    on left: 53, on right: 36 37
$@27 (79)
    on left: 52, on right: 53
CUERPO (80)
    on left: 55, on right: 71
$@28 (81)
    on left: 54, on right: 55
LISTA_INS (82)
    on left: 56 57, on right: 53 55 57
INS (83)
    on left: 61 62 65 67 69, on right: 56 57 70
$@29 (84)
    on left: 58, on right: 61
$@30 (85)
    on left: 59, on right: 61
$@31 (86)
    on left: 60, on right: 61
$@32 (87)
    on left: 63, on right: 65
$@33 (88)
    on left: 64, on right: 65
$@34 (89)
    on left: 66, on right: 67
$@35 (90)
    on left: 68, on right: 69
INSTS (91)
    on left: 70 71, on right: 65 67
COND (92)
    on left: 72, on right: 65 67
EXP (93)
    on left: 73 74, on right: 61 69 72 74 83 84 86
TERMINO (94)
    on left: 75 76, on right: 73 74 76
FACTOR (95)
    on left: 77 78 80 81 83, on right: 75 76
$@36 (96)
    on left: 79, on right: 80
$@37 (97)
    on left: 82, on right: 83
LISTA_EXP (98)
    on left: 84 86, on right: 80 86
$@38 (99)
    on left: 85, on right: 86
RELOP (100)
    on left: 87 88 89 90 91 92, on right: 72
ADOP (101)
    on left: 93 94, on right: 74
MULOP (102)
    on left: 95 96, on right: 76


State 0

    0 $accept: . PROGRAMA $end

    $default  reduce using rule 1 ($@1)

    PROGRAMA  go to state 1
    $@1       go to state 2


State 1

    0 $accept: PROGRAMA . $end

    $end  shift, and go to state 3


State 2

    6 PROGRAMA: $@1 . PROTOTIPOS $@2 CTES $@3 DECLS $@4 FUN_DECLS $@5 FUN_PRINCIPAL

    incluye  shift, and go to state 4

    $default  reduce using rule 13 (PROTOTIPOS)

    PROTOTIPOS  go to state 5


State 3

    0 $accept: PROGRAMA $end .

    $default  accept


State 4

   12 PROTOTIPOS: incluye . menor $@6 id $@7 punto $@8 id $@9 mayor $@10 PROTOTIPOS

    menor  shift, and go to state 6


State 5

    6 PROGRAMA: $@1 PROTOTIPOS . $@2 CTES $@3 DECLS $@4 FUN_DECLS $@5 FUN_PRINCIPAL

    $default  reduce using rule 2 ($@2)

    $@2  go to state 7


State 6

   12 PROTOTIPOS: incluye menor . $@6 id $@7 punto $@8 id $@9 mayor $@10 PROTOTIPOS

    $default  reduce using rule 7 ($@6)

    $@6  go to state 8


State 7

    6 PROGRAMA: $@1 PROTOTIPOS $@2 . CTES $@3 DECLS $@4 FUN_DECLS $@5 FUN_PRINCIPAL

    $default  reduce using rule 14 (CTES)

    CTES  go to state 9


State 8

   12 PROTOTIPOS: incluye menor $@6 . id $@7 punto $@8 id $@9 mayor $@10 PROTOTIPOS

    id  shift, and go to state 10


State 9

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES . $@3 DECLS $@4 FUN_DECLS $@5 FUN_PRINCIPAL
   16 CTES: CTES . define id $@11 numero

    define  shift, and go to state 11

    $default  reduce using rule 3 ($@3)

    $@3  go to state 12


State 10

   12 PROTOTIPOS: incluye menor $@6 id . $@7 punto $@8 id $@9 mayor $@10 PROTOTIPOS

    $default  reduce using rule 8 ($@7)

    $@7  go to state 13


State 11

   16 CTES: CTES define . id $@11 numero

    id  shift, and go to state 14


State 12

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES $@3 . DECLS $@4 FUN_DECLS $@5 FUN_PRINCIPAL

    funcion           reduce using rule 20 (DECLS)
    funcionprincipal  reduce using rule 20 (DECLS)
    $default          reduce using rule 17 ($@12)

    DECLS  go to state 15
    $@12   go to state 16


State 13

   12 PROTOTIPOS: incluye menor $@6 id $@7 . punto $@8 id $@9 mayor $@10 PROTOTIPOS

    punto  shift, and go to state 17


State 14

   16 CTES: CTES define id . $@11 numero

    $default  reduce using rule 15 ($@11)

    $@11  go to state 18


State 15

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES $@3 DECLS . $@4 FUN_DECLS $@5 FUN_PRINCIPAL

    $default  reduce using rule 4 ($@4)

    $@4  go to state 19


State 16

   19 DECLS: $@12 . DECL punto_coma $@13 DECLS

    entero    shift, and go to state 20
    flotante  shift, and go to state 21
    caracter  shift, and go to state 22

    DECL  go to state 23


State 17

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto . $@8 id $@9 mayor $@10 PROTOTIPOS

    $default  reduce using rule 9 ($@8)

    $@8  go to state 24


State 18

   16 CTES: CTES define id $@11 . numero

    numero  shift, and go to state 25


State 19

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES $@3 DECLS $@4 . FUN_DECLS $@5 FUN_PRINCIPAL

    funcionprincipal  reduce using rule 34 (FUN_DECLS)
    $default          reduce using rule 32 ($@19)

    FUN_DECLS  go to state 26
    $@19       go to state 27


State 20

   22 DECL: entero . $@14 LISTA_ID

    $default  reduce using rule 21 ($@14)

    $@14  go to state 28


State 21

   24 DECL: flotante . $@15 LISTA_ID

    $default  reduce using rule 23 ($@15)

    $@15  go to state 29


State 22

   26 DECL: caracter . $@16 LISTA_ID

    $default  reduce using rule 25 ($@16)

    $@16  go to state 30


State 23

   19 DECLS: $@12 DECL . punto_coma $@13 DECLS

    punto_coma  shift, and go to state 31


State 24

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto $@8 . id $@9 mayor $@10 PROTOTIPOS

    id  shift, and go to state 32


State 25

   16 CTES: CTES define id $@11 numero .

    $default  reduce using rule 16 (CTES)


State 26

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES $@3 DECLS $@4 FUN_DECLS . $@5 FUN_PRINCIPAL

    $default  reduce using rule 5 ($@5)

    $@5  go to state 33


State 27

   33 FUN_DECLS: $@19 . FUN_DECL FUN_DECLS

    funcion  shift, and go to state 34

    FUN_DECL  go to state 35
    ENCA      go to state 36


State 28

   22 DECL: entero $@14 . LISTA_ID

    id  shift, and go to state 37

    LISTA_ID  go to state 38


State 29

   24 DECL: flotante $@15 . LISTA_ID

    id  shift, and go to state 37

    LISTA_ID  go to state 39


State 30

   26 DECL: caracter $@16 . LISTA_ID

    id  shift, and go to state 37

    LISTA_ID  go to state 40


State 31

   19 DECLS: $@12 DECL punto_coma . $@13 DECLS

    $default  reduce using rule 18 ($@13)

    $@13  go to state 41


State 32

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto $@8 id . $@9 mayor $@10 PROTOTIPOS

    $default  reduce using rule 10 ($@9)

    $@9  go to state 42


State 33

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES $@3 DECLS $@4 FUN_DECLS $@5 . FUN_PRINCIPAL

    funcionprincipal  shift, and go to state 43

    FUN_PRINCIPAL  go to state 44


State 34

   41 ENCA: funcion . TIPO id $@21 paren_open $@22 $@23 F

    entero    shift, and go to state 45
    flotante  shift, and go to state 46
    caracter  shift, and go to state 47

    TIPO  go to state 48


State 35

   33 FUN_DECLS: $@19 FUN_DECL . FUN_DECLS

    funcionprincipal  reduce using rule 34 (FUN_DECLS)
    $default          reduce using rule 32 ($@19)

    FUN_DECLS  go to state 49
    $@19       go to state 27


State 36

   37 FUN_DECL: ENCA . CUERPOFUN

    llave_open  shift, and go to state 50

    CUERPOFUN  go to state 51


State 37

   28 LISTA_ID: id . $@17 L

    $default  reduce using rule 27 ($@17)

    $@17  go to state 52


State 38

   22 DECL: entero $@14 LISTA_ID .

    $default  reduce using rule 22 (DECL)


State 39

   24 DECL: flotante $@15 LISTA_ID .

    $default  reduce using rule 24 (DECL)


State 40

   26 DECL: caracter $@16 LISTA_ID .

    $default  reduce using rule 26 (DECL)


State 41

   19 DECLS: $@12 DECL punto_coma $@13 . DECLS

    entero    reduce using rule 17 ($@12)
    flotante  reduce using rule 17 ($@12)
    caracter  reduce using rule 17 ($@12)
    $default  reduce using rule 20 (DECLS)

    DECLS  go to state 53
    $@12   go to state 16


State 42

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto $@8 id $@9 . mayor $@10 PROTOTIPOS

    mayor  shift, and go to state 54


State 43

   36 FUN_PRINCIPAL: funcionprincipal . paren_open paren_close $@20 CUERPOFUN

    paren_open  shift, and go to state 55


State 44

    6 PROGRAMA: $@1 PROTOTIPOS $@2 CTES $@3 DECLS $@4 FUN_DECLS $@5 FUN_PRINCIPAL .

    $default  reduce using rule 6 (PROGRAMA)


State 45

   42 TIPO: entero .

    $default  reduce using rule 42 (TIPO)


State 46

   43 TIPO: flotante .

    $default  reduce using rule 43 (TIPO)


State 47

   44 TIPO: caracter .

    $default  reduce using rule 44 (TIPO)


State 48

   41 ENCA: funcion TIPO . id $@21 paren_open $@22 $@23 F

    id  shift, and go to state 56


State 49

   33 FUN_DECLS: $@19 FUN_DECL FUN_DECLS .

    $default  reduce using rule 33 (FUN_DECLS)


State 50

   53 CUERPOFUN: llave_open . $@27 DECLS LISTA_INS llave_close

    $default  reduce using rule 52 ($@27)

    $@27  go to state 57


State 51

   37 FUN_DECL: ENCA CUERPOFUN .

    $default  reduce using rule 37 (FUN_DECL)


State 52

   28 LISTA_ID: id $@17 . L

    coma  shift, and go to state 58

    $default  reduce using rule 31 (L)

    L  go to state 59


State 53

   19 DECLS: $@12 DECL punto_coma $@13 DECLS .

    $default  reduce using rule 19 (DECLS)


State 54

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto $@8 id $@9 mayor . $@10 PROTOTIPOS

    $default  reduce using rule 11 ($@10)

    $@10  go to state 60


State 55

   36 FUN_PRINCIPAL: funcionprincipal paren_open . paren_close $@20 CUERPOFUN

    paren_close  shift, and go to state 61


State 56

   41 ENCA: funcion TIPO id . $@21 paren_open $@22 $@23 F

    $default  reduce using rule 38 ($@21)

    $@21  go to state 62


State 57

   53 CUERPOFUN: llave_open $@27 . DECLS LISTA_INS llave_close

    entero    reduce using rule 17 ($@12)
    flotante  reduce using rule 17 ($@12)
    caracter  reduce using rule 17 ($@12)
    $default  reduce using rule 20 (DECLS)

    DECLS  go to state 63
    $@12   go to state 16


State 58

   30 L: coma . id $@18 L

    id  shift, and go to state 64


State 59

   28 LISTA_ID: id $@17 L .

    $default  reduce using rule 28 (LISTA_ID)


State 60

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto $@8 id $@9 mayor $@10 . PROTOTIPOS

    incluye  shift, and go to state 4

    $default  reduce using rule 13 (PROTOTIPOS)

    PROTOTIPOS  go to state 65


State 61

   36 FUN_PRINCIPAL: funcionprincipal paren_open paren_close . $@20 CUERPOFUN

    $default  reduce using rule 35 ($@20)

    $@20  go to state 66


State 62

   41 ENCA: funcion TIPO id $@21 . paren_open $@22 $@23 F

    paren_open  shift, and go to state 67


State 63

   53 CUERPOFUN: llave_open $@27 DECLS . LISTA_INS llave_close

    id         shift, and go to state 68
    si         shift, and go to state 69
    mientras   shift, and go to state 70
    regresa    shift, and go to state 71
    directiva  shift, and go to state 72

    LISTA_INS  go to state 73
    INS        go to state 74


State 64

   30 L: coma id . $@18 L

    $default  reduce using rule 29 ($@18)

    $@18  go to state 75


State 65

   12 PROTOTIPOS: incluye menor $@6 id $@7 punto $@8 id $@9 mayor $@10 PROTOTIPOS .

    $default  reduce using rule 12 (PROTOTIPOS)


State 66

   36 FUN_PRINCIPAL: funcionprincipal paren_open paren_close $@20 . CUERPOFUN

    llave_open  shift, and go to state 50

    CUERPOFUN  go to state 76


State 67

   41 ENCA: funcion TIPO id $@21 paren_open . $@22 $@23 F

    $default  reduce using rule 39 ($@22)

    $@22  go to state 77


State 68

   61 INS: id . $@29 igual $@30 EXP $@31 punto_coma

    $default  reduce using rule 58 ($@29)

    $@29  go to state 78


State 69

   65 INS: si . $@32 COND entonces $@33 INSTS

    $default  reduce using rule 63 ($@32)

    $@32  go to state 79


State 70

   67 INS: mientras . $@34 COND haz INSTS

    $default  reduce using rule 66 ($@34)

    $@34  go to state 80


State 71

   69 INS: regresa . paren_open $@35 EXP paren_close punto_coma

    paren_open  shift, and go to state 81


State 72

   62 INS: directiva . paraleliza punto_coma

    paraleliza  shift, and go to state 82


State 73

   53 CUERPOFUN: llave_open $@27 DECLS LISTA_INS . llave_close

    llave_close  shift, and go to state 83


State 74

   56 LISTA_INS: INS .
   57          | INS . LISTA_INS

    id         shift, and go to state 68
    si         shift, and go to state 69
    mientras   shift, and go to state 70
    regresa    shift, and go to state 71
    directiva  shift, and go to state 72

    $default  reduce using rule 56 (LISTA_INS)

    LISTA_INS  go to state 84
    INS        go to state 74


State 75

   30 L: coma id $@18 . L

    coma  shift, and go to state 58

    $default  reduce using rule 31 (L)

    L  go to state 85


State 76

   36 FUN_PRINCIPAL: funcionprincipal paren_open paren_close $@20 CUERPOFUN .

    $default  reduce using rule 36 (FUN_PRINCIPAL)


State 77

   41 ENCA: funcion TIPO id $@21 paren_open $@22 . $@23 F

    $default  reduce using rule 40 ($@23)

    $@23  go to state 86


State 78

   61 INS: id $@29 . igual $@30 EXP $@31 punto_coma

    igual  shift, and go to state 87


State 79

   65 INS: si $@32 . COND entonces $@33 INSTS

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    COND     go to state 91
    EXP      go to state 92
    TERMINO  go to state 93
    FACTOR   go to state 94


State 80

   67 INS: mientras $@34 . COND haz INSTS

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    COND     go to state 95
    EXP      go to state 92
    TERMINO  go to state 93
    FACTOR   go to state 94


State 81

   69 INS: regresa paren_open . $@35 EXP paren_close punto_coma

    $default  reduce using rule 68 ($@35)

    $@35  go to state 96


State 82

   62 INS: directiva paraleliza . punto_coma

    punto_coma  shift, and go to state 97


State 83

   53 CUERPOFUN: llave_open $@27 DECLS LISTA_INS llave_close .

    $default  reduce using rule 53 (CUERPOFUN)


State 84

   57 LISTA_INS: INS LISTA_INS .

    $default  reduce using rule 57 (LISTA_INS)


State 85

   30 L: coma id $@18 L .

    $default  reduce using rule 30 (L)


State 86

   41 ENCA: funcion TIPO id $@21 paren_open $@22 $@23 . F

    paren_close  shift, and go to state 98

    $default  reduce using rule 45 ($@24)

    F     go to state 99
    $@24  go to state 100


State 87

   61 INS: id $@29 igual . $@30 EXP $@31 punto_coma

    $default  reduce using rule 59 ($@30)

    $@30  go to state 101


State 88

   77 FACTOR: id .
   78       | id . paren_open paren_close
   80       | id . paren_open $@36 LISTA_EXP paren_close

    paren_open  shift, and go to state 102

    $default  reduce using rule 77 (FACTOR)


State 89

   81 FACTOR: numero .

    $default  reduce using rule 81 (FACTOR)


State 90

   83 FACTOR: paren_open . $@37 EXP paren_close

    $default  reduce using rule 82 ($@37)

    $@37  go to state 103


State 91

   65 INS: si $@32 COND . entonces $@33 INSTS

    entonces  shift, and go to state 104


State 92

   72 COND: EXP . RELOP EXP
   74 EXP: EXP . ADOP TERMINO

    mayor_igual  shift, and go to state 105
    menor_igual  shift, and go to state 106
    mayor        shift, and go to state 107
    menor        shift, and go to state 108
    igual        shift, and go to state 109
    no_igual     shift, and go to state 110
    mas          shift, and go to state 111
    menos        shift, and go to state 112

    RELOP  go to state 113
    ADOP   go to state 114


State 93

   73 EXP: TERMINO .
   76 TERMINO: TERMINO . MULOP FACTOR

    por    shift, and go to state 115
    entre  shift, and go to state 116

    $default  reduce using rule 73 (EXP)

    MULOP  go to state 117


State 94

   75 TERMINO: FACTOR .

    $default  reduce using rule 75 (TERMINO)


State 95

   67 INS: mientras $@34 COND . haz INSTS

    haz  shift, and go to state 118


State 96

   69 INS: regresa paren_open $@35 . EXP paren_close punto_coma

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    EXP      go to state 119
    TERMINO  go to state 93
    FACTOR   go to state 94


State 97

   62 INS: directiva paraleliza punto_coma .

    $default  reduce using rule 62 (INS)


State 98

   47 F: paren_close .

    $default  reduce using rule 47 (F)


State 99

   41 ENCA: funcion TIPO id $@21 paren_open $@22 $@23 F .

    $default  reduce using rule 41 (ENCA)


State 100

   46 F: $@24 . ARGS paren_close

    entero    shift, and go to state 45
    flotante  shift, and go to state 46
    caracter  shift, and go to state 47

    TIPO  go to state 120
    ARGS  go to state 121


State 101

   61 INS: id $@29 igual $@30 . EXP $@31 punto_coma

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    EXP      go to state 122
    TERMINO  go to state 93
    FACTOR   go to state 94


State 102

   78 FACTOR: id paren_open . paren_close
   80       | id paren_open . $@36 LISTA_EXP paren_close

    paren_close  shift, and go to state 123

    $default  reduce using rule 79 ($@36)

    $@36  go to state 124


State 103

   83 FACTOR: paren_open $@37 . EXP paren_close

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    EXP      go to state 125
    TERMINO  go to state 93
    FACTOR   go to state 94


State 104

   65 INS: si $@32 COND entonces . $@33 INSTS

    $default  reduce using rule 64 ($@33)

    $@33  go to state 126


State 105

   87 RELOP: mayor_igual .

    $default  reduce using rule 87 (RELOP)


State 106

   88 RELOP: menor_igual .

    $default  reduce using rule 88 (RELOP)


State 107

   89 RELOP: mayor .

    $default  reduce using rule 89 (RELOP)


State 108

   90 RELOP: menor .

    $default  reduce using rule 90 (RELOP)


State 109

   91 RELOP: igual .

    $default  reduce using rule 91 (RELOP)


State 110

   92 RELOP: no_igual .

    $default  reduce using rule 92 (RELOP)


State 111

   93 ADOP: mas .

    $default  reduce using rule 93 (ADOP)


State 112

   94 ADOP: menos .

    $default  reduce using rule 94 (ADOP)


State 113

   72 COND: EXP RELOP . EXP

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    EXP      go to state 127
    TERMINO  go to state 93
    FACTOR   go to state 94


State 114

   74 EXP: EXP ADOP . TERMINO

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    TERMINO  go to state 128
    FACTOR   go to state 94


State 115

   95 MULOP: por .

    $default  reduce using rule 95 (MULOP)


State 116

   96 MULOP: entre .

    $default  reduce using rule 96 (MULOP)


State 117

   76 TERMINO: TERMINO MULOP . FACTOR

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    FACTOR  go to state 129


State 118

   67 INS: mientras $@34 COND haz . INSTS

    id          shift, and go to state 68
    si          shift, and go to state 69
    mientras    shift, and go to state 70
    regresa     shift, and go to state 71
    directiva   shift, and go to state 72
    llave_open  shift, and go to state 130

    CUERPO  go to state 131
    INS     go to state 132
    INSTS   go to state 133


State 119

   69 INS: regresa paren_open $@35 EXP . paren_close punto_coma
   74 EXP: EXP . ADOP TERMINO

    paren_close  shift, and go to state 134
    mas          shift, and go to state 111
    menos        shift, and go to state 112

    ADOP  go to state 114


State 120

   48 ARGS: TIPO . id
   51     | TIPO . id $@25 coma $@26 ARGS

    id  shift, and go to state 135


State 121

   46 F: $@24 ARGS . paren_close

    paren_close  shift, and go to state 136


State 122

   61 INS: id $@29 igual $@30 EXP . $@31 punto_coma
   74 EXP: EXP . ADOP TERMINO

    mas    shift, and go to state 111
    menos  shift, and go to state 112

    $default  reduce using rule 60 ($@31)

    $@31  go to state 137
    ADOP  go to state 114


State 123

   78 FACTOR: id paren_open paren_close .

    $default  reduce using rule 78 (FACTOR)


State 124

   80 FACTOR: id paren_open $@36 . LISTA_EXP paren_close

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    EXP        go to state 138
    TERMINO    go to state 93
    FACTOR     go to state 94
    LISTA_EXP  go to state 139


State 125

   74 EXP: EXP . ADOP TERMINO
   83 FACTOR: paren_open $@37 EXP . paren_close

    paren_close  shift, and go to state 140
    mas          shift, and go to state 111
    menos        shift, and go to state 112

    ADOP  go to state 114


State 126

   65 INS: si $@32 COND entonces $@33 . INSTS

    id          shift, and go to state 68
    si          shift, and go to state 69
    mientras    shift, and go to state 70
    regresa     shift, and go to state 71
    directiva   shift, and go to state 72
    llave_open  shift, and go to state 130

    CUERPO  go to state 131
    INS     go to state 132
    INSTS   go to state 141


State 127

   72 COND: EXP RELOP EXP .
   74 EXP: EXP . ADOP TERMINO

    mas    shift, and go to state 111
    menos  shift, and go to state 112

    $default  reduce using rule 72 (COND)

    ADOP  go to state 114


State 128

   74 EXP: EXP ADOP TERMINO .
   76 TERMINO: TERMINO . MULOP FACTOR

    por    shift, and go to state 115
    entre  shift, and go to state 116

    $default  reduce using rule 74 (EXP)

    MULOP  go to state 117


State 129

   76 TERMINO: TERMINO MULOP FACTOR .

    $default  reduce using rule 76 (TERMINO)


State 130

   55 CUERPO: llave_open . $@28 LISTA_INS llave_close

    $default  reduce using rule 54 ($@28)

    $@28  go to state 142


State 131

   71 INSTS: CUERPO .

    $default  reduce using rule 71 (INSTS)


State 132

   70 INSTS: INS .

    $default  reduce using rule 70 (INSTS)


State 133

   67 INS: mientras $@34 COND haz INSTS .

    $default  reduce using rule 67 (INS)


State 134

   69 INS: regresa paren_open $@35 EXP paren_close . punto_coma

    punto_coma  shift, and go to state 143


State 135

   48 ARGS: TIPO id .
   51     | TIPO id . $@25 coma $@26 ARGS

    coma      reduce using rule 49 ($@25)
    $default  reduce using rule 48 (ARGS)

    $@25  go to state 144


State 136

   46 F: $@24 ARGS paren_close .

    $default  reduce using rule 46 (F)


State 137

   61 INS: id $@29 igual $@30 EXP $@31 . punto_coma

    punto_coma  shift, and go to state 145


State 138

   74 EXP: EXP . ADOP TERMINO
   84 LISTA_EXP: EXP .
   86          | EXP . coma $@38 LISTA_EXP

    coma   shift, and go to state 146
    mas    shift, and go to state 111
    menos  shift, and go to state 112

    $default  reduce using rule 84 (LISTA_EXP)

    ADOP  go to state 114


State 139

   80 FACTOR: id paren_open $@36 LISTA_EXP . paren_close

    paren_close  shift, and go to state 147


State 140

   83 FACTOR: paren_open $@37 EXP paren_close .

    $default  reduce using rule 83 (FACTOR)


State 141

   65 INS: si $@32 COND entonces $@33 INSTS .

    $default  reduce using rule 65 (INS)


State 142

   55 CUERPO: llave_open $@28 . LISTA_INS llave_close

    id         shift, and go to state 68
    si         shift, and go to state 69
    mientras   shift, and go to state 70
    regresa    shift, and go to state 71
    directiva  shift, and go to state 72

    LISTA_INS  go to state 148
    INS        go to state 74


State 143

   69 INS: regresa paren_open $@35 EXP paren_close punto_coma .

    $default  reduce using rule 69 (INS)


State 144

   51 ARGS: TIPO id $@25 . coma $@26 ARGS

    coma  shift, and go to state 149


State 145

   61 INS: id $@29 igual $@30 EXP $@31 punto_coma .

    $default  reduce using rule 61 (INS)


State 146

   86 LISTA_EXP: EXP coma . $@38 LISTA_EXP

    $default  reduce using rule 85 ($@38)

    $@38  go to state 150


State 147

   80 FACTOR: id paren_open $@36 LISTA_EXP paren_close .

    $default  reduce using rule 80 (FACTOR)


State 148

   55 CUERPO: llave_open $@28 LISTA_INS . llave_close

    llave_close  shift, and go to state 151


State 149

   51 ARGS: TIPO id $@25 coma . $@26 ARGS

    $default  reduce using rule 50 ($@26)

    $@26  go to state 152


State 150

   86 LISTA_EXP: EXP coma $@38 . LISTA_EXP

    id          shift, and go to state 88
    numero      shift, and go to state 89
    paren_open  shift, and go to state 90

    EXP        go to state 138
    TERMINO    go to state 93
    FACTOR     go to state 94
    LISTA_EXP  go to state 153


State 151

   55 CUERPO: llave_open $@28 LISTA_INS llave_close .

    $default  reduce using rule 55 (CUERPO)


State 152

   51 ARGS: TIPO id $@25 coma $@26 . ARGS

    entero    shift, and go to state 45
    flotante  shift, and go to state 46
    caracter  shift, and go to state 47

    TIPO  go to state 120
    ARGS  go to state 154


State 153

   86 LISTA_EXP: EXP coma $@38 LISTA_EXP .

    $default  reduce using rule 86 (LISTA_EXP)


State 154

   51 ARGS: TIPO id $@25 coma $@26 ARGS .

    $default  reduce using rule 51 (ARGS)
